<resources>
    <string name="app_name">Zhbj</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login">登录</string>
    <string name="rememberPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="setServer">配置服务器</string>
    <string name="userLogin">登录</string>
    <string name="hello_world">Hello world!</string>


    <string name="action_config">Config</string>
</resources>
