<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:background="#4790BB">

    <!-- <TextView
        android:id="@+id/textView_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView_initServer"
        android:layout_alignParentLeft="true"
        android:text="@string/back"
        android:background="@drawable/selector_bg"
        android:textColor="#238BFD" />
 -->
    <EditText
        android:id="@+id/editText_userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/imageView1"
        android:layout_toRightOf="@+id/safeouter_item_image_view"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:inputType="textPersonName"
        />

    <ImageView
        android:id="@+id/safeouter_item_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_password"
        android:src="@drawable/lock" />

    <ImageView
        android:id="@+id/ImageView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText_userName"
        android:src="@drawable/user"
        />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editText_password"
        android:layout_marginTop="38dp"
        android:background="@drawable/selector_login_bg"
        android:text="@string/login"
        android:textColor="#FFFFFF" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/button_login"
        android:layout_alignRight="@+id/button_login"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="60dp"
        >

        <CheckBox
            android:id="@+id/checkBox_rememberPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textColor="#ffffff"
            android:text="@string/rememberPassword" />

        <CheckBox
            android:id="@+id/checkBox_autoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:textColor="#ffffff"
            android:text="@string/autoLogin" />

    </RelativeLayout>

    <TextView
        android:id="@+id/textView_initServer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/editText_userName"
        android:text="@string/setServer"
        android:background="@drawable/selector_bg"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_userName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ImageView01"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPassword"
        android:drawableRight="@drawable/plain"/>

    <TextView
        android:id="@+id/textView_userLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView_initServer"
        android:layout_alignBottom="@+id/textView_initServer"
        android:layout_centerHorizontal="true"
        android:text="@string/userLogin"
        android:textColor="#ffffff"/>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_userLogin"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        />

</RelativeLayout>